--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,18 @@ body {
   background: var(--background); */
   font-family: Arial, Helvetica, sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
+@keyframes scrollText {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-scroll {
+  animation: scrollText 30s linear infinite;
+}
